Closed Bug 1356249 Opened 8 years ago Closed 8 years ago

Crash in profiler_set_frame_number

Categories

(Core :: Gecko Profiler, defect)

55 Branch
Unspecified
Windows 10
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla55
Tracking Status
firefox-esr52 --- unaffected
firefox53 --- unaffected
firefox54 --- unaffected
firefox55 --- fixed

People

(Reporter: calixte, Assigned: n.nethercote)

References

(Blocks 1 open bug)

Details

(Keywords: crash, Whiteboard: [clouseau])

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is report bp-06b7d81b-708a-4649-a28b-4c72b2170412. ============================================================= There are 18 crashes coming from 1 installation in nightly 55 with buildid 20170412030252. :njn, I don't know if it's related to your recent modifications in this part of the code, but maybe...
Flags: needinfo?(n.nethercote)
The assertion is probably just wrong. I will take a look early next week.
Assignee: nobody → n.nethercote
Flags: needinfo?(n.nethercote)
In report [1], the user added this comment: "enabled user_pref("layers.frame-counter", true); wanted to see what it is doing. crashing permarnently. have to remove it manually from prefs.js" [1] https://crash-stats.mozilla.com/report/index/e3de443d-5d57-4d79-bec9-d0cdb2170417
This function can run off the main thread when 'layers.frame-counter' is enabled.
Attachment #8859011 - Flags: review?(mstange)
Attachment #8859011 - Flags: review?(mstange) → review+
Pushed by nnethercote@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/9bbf24f5eb3b Fix assertion in profiler_set_frame_number(). r=mstange.
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla55
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: