Bug 1356249 - Fix assertion in profiler_set_frame_number(). r=mstange.

This function can run off the main thread when 'layers.frame-counter' is
enabled.

--HG--
extra : rebase_source : f3db0fd01c636d5af97109761bb0b57b57c79293